Fixed carousel buttons on mobile displays, changed link boxes to display two per row on mobile, cropped team picture.

--- a/assets/animate/set.css
+++ b/assets/animate/set.css
@@ -1134,6 +1134,6 @@ figure.effect-chico:hover p {
 }
 
 
-@media (max-width: 639px) {
+/*@media (max-width: 639px) {
 	.grid figure {width: 100%;}
-}
+}*/
