--- a/css/main.scss
+++ b/css/main.scss
@@ -166,6 +166,11 @@ p {
   }
 }
 
+.carousel-container {
+  width: 90%;
+  margin: 0 auto;
+}
+
 .carousel-inner > .item > {
   img, a > img {
     width: 100%;
@@ -179,6 +184,13 @@ p {
 #background > img {
   width: 100%;
   height: auto;
+}
+
+#team-pic > img {
+  width: 75%;
+  height: auto;
+  margin: 0 auto;
+  display: block;
 }
 
 /*about*/
